_sass/minima/_layout.scss
/* some parts modified but no more immediate modifications warranted 09/11/20 JYC */

/**
 * Site header
 */
.site-header {
  border-top: 3rem solid $background-color;
  border-bottom: 0.5rem solid $background-color;
  min-height: $spacing-unit * 1.865;


  // Positioning context for the mobile navigation icon
  position: relative;
}

.site-title {
  @include relative-font-size(1.625);
  font-size: 3.25rem;
  font-weight: 550;
  line-height: 3.1rem;
  letter-spacing: -3px;
  margin-bottom: 0;
  float: left;
  color: #AF5E59;

  &,
  &:visited {
    color: #AF5E59;
  }
}

.site-title:hover {
  text-decoration: underline;
}

.site-nav {
  float: right;
  line-height: 3.7rem;


  .nav-trigger {
      display: none;
  }

  .menu-icon {
    display: none;
  }

  .page-link {
    font-size: 1.25rem;
    color: #4E6E4E;
    line-height: $base-line-height;
    letter-spacing: -.2px;

    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 20px;
    }
  }

  .page-link:hover {
    color: #000;
    text-decoration: none;
  }

  @include media-query($on-palm) {
    position: absolute;
    top: 9px;
    right: $spacing-unit / 2;
    background-color: $background-color;
    border: 1px solid $grey-color-light;
    border-radius: 5px;
    text-align: right;


    .menu-icon {
      display: block;
      float: right;
      width: 36px;
      height: 26px;
      line-height: 0;
      padding-top: 10px;
      text-align: center;

      > svg {
        fill: $grey-color-dark;
      }
    }

    input ~ .trigger {
      clear: both;
      display: none;
    }

    input:checked ~ .trigger {
      display: block;
      padding-bottom: 5px;
    }

    .page-link {
      display: block;
      padding: 5px 10px;


      &:not(:last-child) {
        margin-right: 0;
      }
      margin-left: 20px;
    }
  }
}


/**
 * Site footer
 */
.site-footer {
  border-top: .75px solid $grey-color-light;
  border-bottom: 1rem solid $background-color;
  padding-bottom: 30px;
  padding-top: 15px;
}

.footer-heading {
  @include relative-font-size(1.125);
  margin-bottom: $spacing-unit / 2;
}

/* social tags positioning! */

.social-media-list {
  display: table;
  margin: 0 auto;
}

.social-media-list li, .pagination li {
  float: left;
  margin: 5px 10px 5px 0;
}

.contact-list,
.social-media-list {
  list-style: none;
}

.social-media-list li a {
  display: block;
  padding: 7.5px;
  border: 1px solid #828282;
  border-radius: 50%;
  width: 15px;
  height: 15px;
}

/* the below classes were not used for customised footer */
.footer-col-wrapper {
  @include relative-font-size(0.9375);
  color: $grey-color;
  margin-left: -$spacing-unit / 2;
  @extend %clearfix;
}

.footer-col {
  float: left;
  margin-bottom: $spacing-unit / 2;
  padding-left: $spacing-unit / 2;
}

.footer-col-1 {
  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
  width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
  width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
  width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
    width:         calc(50% - (#{$spacing-unit} / 2));
  }

  .footer-col-3 {
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}

@include media-query($on-palm) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}

/* the above classes were not used for customised footer */

/**
 * Page content
 */
.page-content {
  padding: 0px 0;
  flex: 1;
}

.page-heading {
  @include relative-font-size(2);
}

.post-list-heading {
  @include relative-font-size(1.75);
}

.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.post-link {
  color: #5759A7;
  display: block;
  @include relative-font-size(1.5);
}


.post-link:hover {
  color: #353535;
  text-decoration: none;
  }

/**
 * Posts
 */
.post-header {
  margin-bottom: $spacing-unit;
}

.post-title {
  @include relative-font-size(2.625);
  letter-spacing: -1px;
  line-height: 1;

  @include media-query($on-laptop) {
    @include relative-font-size(2.25);
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h2 {
    @include relative-font-size(2);

    @include media-query($on-laptop) {
      @include relative-font-size(1.75);
    }
  }

  h3 {
    @include relative-font-size(1.625);

    @include media-query($on-laptop) {
      @include relative-font-size(1.375);
    }
  }

  h4 {
    @include relative-font-size(1.25);

    @include media-query($on-laptop) {
      @include relative-font-size(1.125);
    }
  }
}

